--- a/views/update.ejs
+++ b/views/update.ejs
@@ -12,7 +12,7 @@
         <input type="text" id="title" name="title" value="<%= book.title %>">
         <br>
         <label for ="author">Author:</label>
-        <input type="text" id="author" name="author" value="<%= book.title %>">
+        <input type="text" id="author" name="author" value="<%= book.author %>">
         <br>
         <input type="submit" value="Update">
     </form>
